--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,35 +33,78 @@ h6 {
   font-family: "Satisfy", sans-serif;
 }
 
-#float {
+/* #header::after{
+  content: "Reserve Now!!";
+  width: 10%;
+  font-size: 1.3em;
+  background-color: #88775d;
+  border-color: transparent !important;
+  color: white;
+  border: 1px solid white;
+  text-align: left;
+  position: absolute;
+  right: 2rem;
+  top: 4.5rem;
+  border-radius: 20px 5px;
   padding: 0.5rem 1rem;
   z-index: 100;
-  position: fixed;
-  top: 10rem;
-  right: 40px;
-  background-color: #88775d;
-  color: #fff;
-  border-radius: 20px 5px;
   text-align: center;
-  /* box-shadow: 2px 2px 3px #999; */
+  animation: float-enter 1s ease-in backwards;
+} */
+
+#header::after {
+  content: "";
+  display: block;
+  width: 10%;
+  font-size: 1.3em;
+  border-color: transparent !important;
+  color: white;
+  text-align: left;
+  position: absolute;
+  right: 2rem;
+  top: 4.5rem;
+  border-radius: 20px 5px;
+  padding: 0.5rem 1rem;
+  z-index: 100;
+  text-align: center;
   animation: float-enter 1s ease-in backwards;
 }
 
-#float:hover {
+#header-button {
+  display: block;
+  /* width: ; */
+  text-align: center;
+  padding: 0.5rem 1rem;
+  border-radius: 20px 5px;
+  background-color: #88775d;
+  color: #fff;
+  border: 0px solid white;
+  text-decoration: none;
+  z-index: 101;
+  position: absolute;
+  right: 2rem;
+  top: 4.5rem;
+}
+
+#header-button:hover {
+  background-color: #6d5f46;
+  border-color: #6d5f46;
   transform: scale(1.1);
   transition: transform 0.3s;
 }
 
-#float a {
-  color: floralwhite;
+#header-button-content {
   font-size: 1.3rem;
-}
-#float a:hover {
-  transform: scale(1.1);
-  color: floralwhite;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes float-enter {
+
+
+@keyframes header-button  {
   0% {
     transform: translateY(100%);
     opacity: 0;
@@ -71,6 +114,7 @@ h6 {
     opacity: 1;
   }
 }
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
