--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,10 +72,10 @@ h6 {
 
 #header-button {
   display: block;
-  /* width: ; */
+  width: 25%;
   text-align: center;
   padding: 0.5rem 1rem;
-  border-radius: 20px 5px;
+  border-radius: 5px;
   background-color: #88775d;
   color: #fff;
   border: 0px solid white;
@@ -84,6 +84,7 @@ h6 {
   position: absolute;
   right: 2rem;
   top: 4.5rem;
+  animation: float-enter 1s ease-in backwards;
 }
 
 #header-button:hover {
@@ -99,12 +100,10 @@ h6 {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
 }
 
-
-
-@keyframes header-button  {
+@keyframes float-enter {
   0% {
     transform: translateY(100%);
     opacity: 0;
@@ -113,6 +112,48 @@ h6 {
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+.header-button-container::after {
+  animation: float-enter 1s ease-in backwards;
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 30px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 30px solid #88775d;
+  position: absolute;
+  right: 0.2rem;
+  top: 4.8rem;
+}
+@media (max-width: 706px) {
+  #header-button {
+    width: 35%;
+  }
+  #header-button-content {
+    font-size: 1rem;
+  }
+
+  .header-button-container::after {
+    animation: float-enter 1s ease-in backwards;
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 30px solid #88775d;
+    position: absolute;
+    right: 0.2rem;
+    top: 4.8rem;
+  }
+}
+@media (max-width: 706px) {
+  #header-button {
+    width: 50%;
+  }
+
 }
 
 /*--------------------------------------------------------------
@@ -248,6 +289,16 @@ h6 {
     margin: 0 15px 0 0;
     padding: 8px 20px;
     letter-spacing: 1px;
+  }
+  #services {
+    justify-content: center;
+  }
+  #nameForm {
+    flex-direction: column;
+    width: 100%;
+  }
+  #recipient-last #recipient-name #recipient-middle {
+    width: 100%;
   }
 }
 
